PR-15 modificación del perfil

--- a/AlbertoPerfil.html
+++ b/AlbertoPerfil.html
@@ -122,7 +122,12 @@
         class="avatar"
       />
       <h2>Alberto Vázquez Díaz</h2>
-      <p class="title">Desarrollador Web | Diseñador UX</p>
+      <p class="title">Ingeniería en Desarrollo y Gestión de Software</p>
+      <div>
+        <span>
+            Hobbies: Escuchar música, los autos y ver series.
+        </span>
+      </div>
       <div class="social-links">
         <a href="https://www.linkedin.com/in/alberto-vázquez-91409023b/" target="_blank" aria-label="LinkedIn"
           ><i class="fab fa-linkedin"></i
