--- a/PerfilJesus.html
+++ b/PerfilJesus.html
@@ -49,6 +49,19 @@
                             la musica y jugar videojuegos en mis tiempos libres. 
                         </p>
                     </div>
+                    <div class="mt-8 text-center">
+                        <div class="flex justify-center space-x-4">
+                            <a href="mailto:tu.email@ejemplo.com" class="text-gray-600 hover:text-indigo-600 transition-colors">
+                                <i class="fas fa-envelope text-2xl"></i>
+                            </a>
+                            <a href="#" class="text-gray-600 hover:text-indigo-600 transition-colors">
+                                <i class="fab fa-github text-2xl"></i>
+                            </a>
+                            <a href="#" class="text-gray-600 hover:text-indigo-600 transition-colors">
+                                <i class="fab fa-linkedin text-2xl"></i>
+                            </a>
+                        </div>
+                    </div>
                 </div>
             </div>
         </div>
