--- a/PerfilJesus.html
+++ b/PerfilJesus.html
@@ -9,6 +9,9 @@
 </head>
 <body class="bg-gray-100 min-h-screen">
     <div class="container mx-auto px-4 py-8">
+        <a href="index.html" class="inline-block mb-4 px-6 py-2 bg-indigo-600 text-white rounded-lg hover:bg-indigo-700 transition-colors">
+            <i class="fas fa-arrow-left mr-2"></i>Regresar
+        </a>
         <div class="max-w-2xl mx-auto bg-white rounded-xl shadow-lg overflow-hidden">
             <div class="h-32 bg-gradient-to-r from-indigo-500 to-purple-600"></div>
             
@@ -44,7 +47,7 @@
                     <div class="mt-6 text-left">
                         <h2 class="text-xl font-semibold text-gray-700 mb-3">Sobre Mí</h2>
                         <p class="text-gray-600 leading-relaxed">
-                            Estudiante de la universidad Emiliano Zapata Morelos, tengo 21 años de edad,
+                            Estudiante de la universidad Tecnologica Emiliano Zapata Morelos, tengo 21 años de edad,
                             me gusta mucho la programacion y el desarrollo de software, me gusta mucho el futbol,
                             la musica y jugar videojuegos en mis tiempos libres. 
                         </p>
