--- a/index.html
+++ b/index.html
@@ -63,13 +63,15 @@
             >
               <i class="fas fa-user text-3xl"></i>
             </div>
-            <h3 class="text-xl font-semibold mb-2">Miembro 2</h3>
-            <p class="text-gray-400 mb-4">UX/UI Designer</p>
-            <button
-              class="bg-gradient-to-r from-purple-500 to-pink-500 px-6 py-2 rounded-full hover:opacity-90 transition-opacity"
-            >
-              Ver Perfil
-            </button>
+            <h3 class="text-xl font-semibold mb-2">Jesus Torres Galván</h3>
+            <p class="text-gray-400 mb-4">Frontend Developer</p>
+            <a href="/PerfilJesus.html">
+              <button
+                class="bg-gradient-to-r from-purple-500 to-pink-500 px-6 py-2 rounded-full hover:opacity-90 transition-opacity"
+              >
+                Ver Perfil
+              </button>
+            </a>
           </div>
         </div>
 
