--- a/index.html
+++ b/index.html
@@ -158,13 +158,15 @@
             >
               <i class="fas fa-user text-3xl"></i>
             </div>
-            <h3 class="text-xl font-semibold mb-2">Miembro 3</h3>
+            <h3 class="text-xl font-semibold mb-2">Carlos Benjamin</h3>
             <p class="text-gray-400 mb-4">Backend Developer</p>
-            <button
-              class="bg-gradient-to-r from-pink-500 to-red-500 px-6 py-2 rounded-full hover:opacity-90 transition-opacity"
-            >
-              Ver Perfil
-            </button>
+            <a href="/benjamin.html">
+              <button
+                class="bg-gradient-to-r from-pink-500 to-red-500 px-6 py-2 rounded-full hover:opacity-90 transition-opacity"
+              >
+                Ver Perfil
+              </button>
+            </a>
           </div>
         </div>
       </div>
