--- a/index.html
+++ b/index.html
@@ -102,24 +102,25 @@
           </div>
         </div>
 
-        <div
-          class="bg-gray-800 rounded-xl p-6 transform hover:scale-105 transition-all duration-300 hover:shadow-xl hover:shadow-blue-500/20"
-        >
+        <div class="bg-gray-800 rounded-xl p-6 transform hover:scale-105 transition-all duration-300 hover:shadow-xl hover:shadow-purple-500/20">
           <div class="text-center">
-            <div
-              class="w-24 h-24 mx-auto bg-gradient-to-br from-blue-500 to-purple-500 rounded-full flex items-center justify-center mb-4"
-            >
-              <i class="fas fa-user text-3xl"></i>
+            <div class="w-24 h-24 mx-auto rounded-full overflow-hidden shadow-lg mb-4">
+              <img
+                src="images/Josh.png"
+                alt="Joshua Quevedo"
+                class="w-full h-full object-cover"
+                onerror="this.src='https://via.placeholder.com/150'"
+              />
             </div>
-            <h3 class="text-xl font-semibold mb-2">Erickelguapo</h3>
-            <p class="text-gray-400 mb-4">
-              Desarrollador Full Stack y líder del equipo
-            </p>
-            <button
-              class="bg-gradient-to-r from-blue-500 to-purple-500 px-6 py-2 rounded-full hover:opacity-90 transition-opacity"
-            >
-              Ver Perfil
-            </button>
+            <h3 class="text-xl font-semibold mb-2">Joshua Quevedo</h3>
+            <p class="text-gray-400 mb-4">Frontend Developer</p>
+            <a href="josh.html">
+              <button
+                class="bg-gradient-to-r from-purple-500 to-pink-500 px-6 py-2 rounded-full hover:opacity-90 transition-opacity"
+              >
+                Ver Perfil
+              </button>
+            </a>
           </div>
         </div>
 
@@ -148,15 +149,9 @@
             </a>
           </div>
         </div>
-
-        <div
-          class="bg-gray-800 rounded-xl p-6 transform hover:scale-105 transition-all duration-300 hover:shadow-xl hover:shadow-pink-500/20"
-        >
+        <div class="bg-gray-800 rounded-xl p-6 transform hover:scale-105 transition-all duration-300 hover:shadow-xl hover:shadow-purple-500/20">
           <div class="text-center">
-            <div
-              class="w-24 h-24 mx-auto bg-gradient-to-br from-pink-500 to-red-500 rounded-full flex items-center justify-center mb-4"
-            >
-              <i class="fas fa-user text-3xl"></i>
+            <div class="w-24 h-24 mx-auto rounded-full overflow-hidden shadow-lg mb-4">
             </div>
             <h3 class="text-xl font-semibold mb-2">Carlos Benjamin</h3>
             <p class="text-gray-400 mb-4">Backend Developer</p>
