[ADD] Se modifico el index.html y julian.html

--- a/index.html
+++ b/index.html
@@ -164,6 +164,32 @@
             </a>
           </div>
         </div>
+
+        <div
+          class="bg-gray-800 rounded-xl p-6 transform hover:scale-105 transition-all duration-300 hover:shadow-xl hover:shadow-pink-500/20"
+        >
+          <div class="text-center">
+            <div
+              class="w-24 h-24 mx-auto bg-gradient-to-br from-purple-500 to-pink-500 rounded-full flex items-center justify-center mb-4"
+            >
+            <img
+                src="https://lh3.googleusercontent.com/a/ACg8ocJM_dUQYbHIycgyYDUrDrX-_wOK7F_PpA1e7s1hga85OZv5aUQ=s96-c-rg-br100"
+                alt="Aldair Vargas"
+                class="w-full h-full object-cover rounded-full"
+                onerror="this.src='https://via.placeholder.com/150'"
+              />
+            </div>
+            <h3 class="text-xl font-semibold mb-2">Julian</h3>
+            <p class="text-gray-400 mb-4">Full Stack Developer</p>
+            <a href="/julian.html">
+              <button
+                class="bg-gradient-to-r from-purple-500 to-pink-500 px-6 py-2 rounded-full hover:opacity-90 transition-opacity"
+              >
+                Ver Perfil
+              </button>
+            </a>
+          </div>
+        </div>
       </div>
     </div>
   </body>
