--- a/index.html
+++ b/index.html
@@ -11,10 +11,7 @@
     />
     <style>
       .glow {
-        text-shadow:
-          0 0 8px #7f5af0,
-          0 0 16px #7f5af0,
-          0 0 32px #7f5af0;
+        text-shadow: 0 0 8px #7f5af0, 0 0 16px #7f5af0, 0 0 32px #7f5af0;
         animation: glowPulse 2s infinite alternate;
       }
 
@@ -30,9 +27,15 @@
   </head>
   <body class="relative bg-gray-900 text-white min-h-screen overflow-x-hidden">
     <!-- SVG decorativo animado -->
-    <svg id="techLines" width="100%" height="160" viewBox="0 0 800 160" fill="none"
+    <svg
+      id="techLines"
+      width="100%"
+      height="160"
+      viewBox="0 0 800 160"
+      fill="none"
       xmlns="http://www.w3.org/2000/svg"
-      class="absolute top-0 left-0 z-0 opacity-20 pointer-events-none">
+      class="absolute top-0 left-0 z-0 opacity-20 pointer-events-none"
+    >
       <path
         d="M0 80 Q200 0 400 80 T800 80"
         stroke="#00FFFF"
@@ -57,15 +60,28 @@
         <!-- Todas las tarjetas actualizadas -->
 
         <!-- Erick -->
-        <div class="bg-gray-800 rounded-xl p-6 transform hover:scale-105 transition-all duration-300 hover:shadow-xl hover:shadow-blue-500/20">
+        <div
+          class="bg-gray-800 rounded-xl p-6 transform hover:scale-105 transition-all duration-300 hover:shadow-xl hover:shadow-blue-500/20"
+        >
           <div class="text-center">
-            <div class="w-24 h-24 mx-auto mb-4 rounded-full overflow-hidden shadow-lg">
-              <img src="images/Erick.png" alt="Erickelguapo" class="w-full h-full object-cover" onerror="this.src='https://via.placeholder.com/150'" />
+            <div
+              class="w-24 h-24 mx-auto mb-4 rounded-full overflow-hidden shadow-lg"
+            >
+              <img
+                src="images/Erick.png"
+                alt="Erickelguapo"
+                class="w-full h-full object-cover"
+                onerror="this.src='https://via.placeholder.com/150'"
+              />
             </div>
             <h3 class="text-xl font-semibold mb-2">Erickelguapo</h3>
-            <p class="text-gray-400 mb-4">Desarrollador Full Stack y líder del equipo</p>
+            <p class="text-gray-400 mb-4">
+              Desarrollador Full Stack y líder del equipo
+            </p>
             <a href="/erick.html">
-              <button class="bg-gradient-to-r from-blue-500 to-purple-500 px-6 py-2 rounded-full hover:opacity-90 transition-opacity">
+              <button
+                class="bg-gradient-to-r from-blue-500 to-purple-500 px-6 py-2 rounded-full hover:opacity-90 transition-opacity"
+              >
                 Ver Perfil
               </button>
             </a>
@@ -73,15 +89,21 @@
         </div>
 
         <!-- Jesus -->
-        <div class="bg-gray-800 rounded-xl p-6 transform hover:scale-105 transition-all duration-300 hover:shadow-xl hover:shadow-purple-500/20">
+        <div
+          class="bg-gray-800 rounded-xl p-6 transform hover:scale-105 transition-all duration-300 hover:shadow-xl hover:shadow-purple-500/20"
+        >
           <div class="text-center">
-            <div class="w-24 h-24 mx-auto bg-gradient-to-br from-purple-500 to-pink-500 rounded-full flex items-center justify-center mb-4">
+            <div
+              class="w-24 h-24 mx-auto bg-gradient-to-br from-purple-500 to-pink-500 rounded-full flex items-center justify-center mb-4"
+            >
               <i class="fas fa-user text-3xl"></i>
             </div>
             <h3 class="text-xl font-semibold mb-2">Jesus Torres Galván</h3>
             <p class="text-gray-400 mb-4">Frontend Developer</p>
             <a href="/PerfilJesus.html">
-              <button class="bg-gradient-to-r from-purple-500 to-pink-500 px-6 py-2 rounded-full hover:opacity-90 transition-opacity">
+              <button
+                class="bg-gradient-to-r from-purple-500 to-pink-500 px-6 py-2 rounded-full hover:opacity-90 transition-opacity"
+              >
                 Ver Perfil
               </button>
             </a>
@@ -89,15 +111,25 @@
         </div>
 
         <!-- Alberto -->
-        <div class="bg-gray-800 rounded-xl p-6 transform hover:scale-105 transition-all duration-300 hover:shadow-xl hover:shadow-pink-500/20">
+        <div
+          class="bg-gray-800 rounded-xl p-6 transform hover:scale-105 transition-all duration-300 hover:shadow-xl hover:shadow-pink-500/20"
+        >
           <div class="text-center">
-            <div class="w-24 h-24 mx-auto bg-gradient-to-br from-pink-500 to-red-500 rounded-full flex items-center justify-center mb-4">
-              <img src="https://media.licdn.com/dms/image/v2/D4E35AQGw9C0xshctiw/profile-framedphoto-shrink_400_400/profile-framedphoto-shrink_400_400/0/1730699144929?e=1749769200&v=beta&t=SXCceFOhDCuRcl45D3f65Y3HeqRWV7NdsbZ9vOfbBtc" alt="Alberto Vázquez" class="w-full h-full object-cover rounded-full" />
+            <div
+              class="w-24 h-24 mx-auto bg-gradient-to-br from-pink-500 to-red-500 rounded-full flex items-center justify-center mb-4"
+            >
+              <img
+                src="https://media.licdn.com/dms/image/v2/D4E35AQGw9C0xshctiw/profile-framedphoto-shrink_400_400/profile-framedphoto-shrink_400_400/0/1730699144929?e=1749769200&v=beta&t=SXCceFOhDCuRcl45D3f65Y3HeqRWV7NdsbZ9vOfbBtc"
+                alt="Alberto Vázquez"
+                class="w-full h-full object-cover rounded-full"
+              />
             </div>
             <h3 class="text-xl font-semibold mb-2">Miembro 3</h3>
             <p class="text-gray-400 mb-4">UX/UI Designer</p>
             <a href="/AlbertoPerfil.html">
-              <button class="bg-gradient-to-r from-pink-500 to-red-500 px-6 py-2 rounded-full hover:opacity-90 transition-opacity">
+              <button
+                class="bg-gradient-to-r from-pink-500 to-red-500 px-6 py-2 rounded-full hover:opacity-90 transition-opacity"
+              >
                 Ver Perfil
               </button>
             </a>
@@ -105,15 +137,25 @@
         </div>
 
         <!-- Joshua -->
-        <div class="bg-gray-800 rounded-xl p-6 transform hover:scale-105 transition-all duration-300 hover:shadow-xl hover:shadow-purple-500/20">
+        <div
+          class="bg-gray-800 rounded-xl p-6 transform hover:scale-105 transition-all duration-300 hover:shadow-xl hover:shadow-purple-500/20"
+        >
           <div class="text-center">
-            <div class="w-24 h-24 mx-auto rounded-full overflow-hidden shadow-lg mb-4">
-              <img src="images/Josh.png" alt="Joshua Quevedo" class="w-full h-full object-cover" />
+            <div
+              class="w-24 h-24 mx-auto rounded-full overflow-hidden shadow-lg mb-4"
+            >
+              <img
+                src="images/Josh.png"
+                alt="Joshua Quevedo"
+                class="w-full h-full object-cover"
+              />
             </div>
             <h3 class="text-xl font-semibold mb-2">Joshua Quevedo</h3>
             <p class="text-gray-400 mb-4">Frontend Developer</p>
             <a href="/josh.html">
-              <button class="bg-gradient-to-r from-purple-500 to-pink-500 px-6 py-2 rounded-full hover:opacity-90 transition-opacity">
+              <button
+                class="bg-gradient-to-r from-purple-500 to-pink-500 px-6 py-2 rounded-full hover:opacity-90 transition-opacity"
+              >
                 Ver Perfil
               </button>
             </a>
@@ -121,15 +163,25 @@
         </div>
 
         <!-- Rauzg3r -->
-        <div class="bg-gray-800 rounded-xl p-6 transform hover:scale-105 transition-all duration-300 hover:shadow-xl hover:shadow-purple-500/20">
+        <div
+          class="bg-gray-800 rounded-xl p-6 transform hover:scale-105 transition-all duration-300 hover:shadow-xl hover:shadow-purple-500/20"
+        >
           <div class="text-center">
-            <div class="w-24 h-24 mx-auto bg-gradient-to-br from-purple-500 to-pink-500 rounded-full flex items-center justify-center mb-4">
-              <img src="https://upload.wikimedia.org/wikipedia/commons/e/ea/Twenty_One_Pilots_-_Southside_Festival_2022_-_IMG_6029_-_1_%28cropped%29.jpg" alt="Aldair Vargas" class="w-full h-full object-cover rounded-full" />
+            <div
+              class="w-24 h-24 mx-auto bg-gradient-to-br from-purple-500 to-pink-500 rounded-full flex items-center justify-center mb-4"
+            >
+              <img
+                src="https://upload.wikimedia.org/wikipedia/commons/e/ea/Twenty_One_Pilots_-_Southside_Festival_2022_-_IMG_6029_-_1_%28cropped%29.jpg"
+                alt="Aldair Vargas"
+                class="w-full h-full object-cover rounded-full"
+              />
             </div>
             <h3 class="text-xl font-semibold mb-2">Rauzg3r</h3>
             <p class="text-gray-400 mb-4">Full Stack Developer</p>
             <a href="/aldair.html">
-              <button class="bg-gradient-to-r from-purple-500 to-pink-500 px-6 py-2 rounded-full hover:opacity-90 transition-opacity">
+              <button
+                class="bg-gradient-to-r from-purple-500 to-pink-500 px-6 py-2 rounded-full hover:opacity-90 transition-opacity"
+              >
                 Ver Perfil
               </button>
             </a>
@@ -137,13 +189,19 @@
         </div>
 
         <!-- Carlos Benjamin -->
-        <div class="bg-gray-800 rounded-xl p-6 transform hover:scale-105 transition-all duration-300 hover:shadow-xl hover:shadow-purple-500/20">
+        <div
+          class="bg-gray-800 rounded-xl p-6 transform hover:scale-105 transition-all duration-300 hover:shadow-xl hover:shadow-purple-500/20"
+        >
           <div class="text-center">
-            <div class="w-24 h-24 mx-auto rounded-full overflow-hidden shadow-lg mb-4"></div>
+            <div
+              class="w-24 h-24 mx-auto rounded-full overflow-hidden shadow-lg mb-4"
+            ></div>
             <h3 class="text-xl font-semibold mb-2">Carlos Benjamin</h3>
             <p class="text-gray-400 mb-4">Backend Developer</p>
             <a href="/benjamin.html">
-              <button class="bg-gradient-to-r from-pink-500 to-red-500 px-6 py-2 rounded-full hover:opacity-90 transition-opacity">
+              <button
+                class="bg-gradient-to-r from-pink-500 to-red-500 px-6 py-2 rounded-full hover:opacity-90 transition-opacity"
+              >
                 Ver Perfil
               </button>
             </a>
@@ -151,21 +209,6 @@
         </div>
 
         <!-- Julian -->
-        <div class="bg-gray-800 rounded-xl p-6 transform hover:scale-105 transition-all duration-300 hover:shadow-xl hover:shadow-pink-500/20">
-          <div class="text-center">
-            <div class="w-24 h-24 mx-auto bg-gradient-to-br from-purple-500 to-pink-500 rounded-full flex items-center justify-center mb-4">
-              <img src="https://lh3.googleusercontent.com/a/ACg8ocJM_dUQYbHIycgyYDUrDrX-_wOK7F_PpA1e7s1hga85OZv5aUQ=s96-c-rg-br100" alt="Julian" class="w-full h-full object-cover rounded-full" />
-            </div>
-            <h3 class="text-xl font-semibold mb-2">Julian</h3>
-            <p class="text-gray-400 mb-4">Full Stack Developer</p>
-            <a href="/julian.html">
-              <button class="bg-gradient-to-r from-purple-500 to-pink-500 px-6 py-2 rounded-full hover:opacity-90 transition-opacity">
-                Ver Perfil
-              </button>
-            </a>
-          </div>
-        </div>
-
         <div
           class="bg-gray-800 rounded-xl p-6 transform hover:scale-105 transition-all duration-300 hover:shadow-xl hover:shadow-pink-500/20"
         >
@@ -173,11 +216,10 @@
             <div
               class="w-24 h-24 mx-auto bg-gradient-to-br from-purple-500 to-pink-500 rounded-full flex items-center justify-center mb-4"
             >
-            <img
+              <img
                 src="https://lh3.googleusercontent.com/a/ACg8ocJM_dUQYbHIycgyYDUrDrX-_wOK7F_PpA1e7s1hga85OZv5aUQ=s96-c-rg-br100"
-                alt="Aldair Vargas"
+                alt="Julian"
                 class="w-full h-full object-cover rounded-full"
-                onerror="this.src='https://via.placeholder.com/150'"
               />
             </div>
             <h3 class="text-xl font-semibold mb-2">Julian</h3>
